Fix page navigation - add active class to first week and navigation link

--- a/nyc_events_calendar.html
+++ b/nyc_events_calendar.html
@@ -138,10 +138,10 @@
             <!-- Week Navigation -->
             <div class="week-nav">
                 <h3 class="text-lg font-semibold mb-2">Jump to Week:</h3>
-    <a onclick="showWeek('week-0')">Week of June 30, 2025</a><a onclick="showWeek('week-1')">Week of July 07, 2025</a><a onclick="showWeek('week-2')">Week of July 14, 2025</a><a onclick="showWeek('week-3')">Week of July 21, 2025</a><a onclick="showWeek('week-4')">Week of July 28, 2025</a>
+    <a onclick="showWeek('week-0')" class=" active">Week of June 30, 2025</a><a onclick="showWeek('week-1')" class="">Week of July 07, 2025</a><a onclick="showWeek('week-2')" class="">Week of July 14, 2025</a><a onclick="showWeek('week-3')" class="">Week of July 21, 2025</a><a onclick="showWeek('week-4')" class="">Week of July 28, 2025</a>
             </div>
     
-            <div id="week-0" class="week-section">
+            <div id="week-0" class="week-section active">
                 <h2 class="text-3xl font-bold text-center text-gray-800 mb-6">Week of June 30, 2025</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         
